--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the statuses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.status {
+	border-bottom: solid 1px #CCC;
+	padding: 5px 0;
+}
+
+// Overides Bootstraps default p margin of 9px. We did this to 
+// remove uneccessary space between statuses and the timestamp
+// and Edit and Delete links.
+.status p {
+		margin: 4px 0;
+	}
+
+.status.hover {
+	background: #FAFAFA
+}
+
+.status .admin {
+	display: none;
+}
+
+.status.hover .admin {
+	display: inline;
+}
