--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@status) do |f| %>
+<%= simple_form_for(@status, html: { class: 'form-horizontal' }) do |f| %>
   <% if @status.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@status.errors.count, "error") %> prohibited this status from being saved:</h2>
@@ -11,15 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br />
-    <%= f.text_area :content %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <!-- Simple Form collections lets us grab an array, which in this case -->
+  <!-- is all users, then we can use label_method to call the full_name -->
+  <!-- method that we created in the User model. This code allows us to -->
+  <!-- display the full name in a drop down in the edit status page.    -->
+
+  <%= f.input :user_id, collection: User.all, label_method: :full_name %>
+  <%= f.input :content %>
+
+  <div class="form-actions">
+    <%= f.button :submit %>
   </div>
 <% end %>
