--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,15 @@
 	</head>
 	<body>
 		<div class="container">
-			<p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      
+			<!-- Iterates over flash object. type = :notice, :alert, etc. & msg = actual message you want to display -->
+			<% flash.each do |type, msg| %>
+				<!-- flash_class is a global helper method you added to the ApplicationHelper (application_helper.rb)-->
+				<div class="alert <%= flash_class(type) %>">
+					<button class="close" data-dismiss="alert">&times;</button>
+					<%= msg %>
+				</div>
+			<% end %>
+
 			<%= render 'layouts/header' %>
 				<%= yield %>
 			<%= render 'layouts/footer' %>
