--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,21 +10,21 @@
 	  </a>
  
 	  <!-- Be sure to leave the brand out there if you want it shown -->
-	  <%= link_to "rybook", "#", class: "brand" %>
+	  <%= link_to "rybook", feed_path, class: "brand" %>
  
 	  <!-- Everything you want hidden at 940px or less, place within here -->
 	  <div class="nav-collapse collapse">
 		<!-- .nav, .navbar-search, .navbar-form, etc -->
 		<ul class="nav">
-		  <li><%= link_to "All Statuses", statuses_path %></li>
+		  <li><%= link_to "All Statuses", feed_path %></li>
 		</ul>
 		<ul class="nav pull-right">
 			<% if user_signed_in? %>
 				<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
-				<li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+				<li><%= link_to "Log out", logout_path %></li>
 			<% else %>
-				<li><%= link_to "Register", new_user_registration_path %></li>
-				<li><%= link_to "Log in", new_user_session_path %></li>
+				<li><%= link_to "Register", register_path %></li>
+				<li><%= link_to "Log in", login_path %></li>
 
 		<% end %> 
 			</ul>
