--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,25 @@
-<h2>Sign Up</h2>
+<div class="fluid-row">
+  <div class="span5">
+    <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal well' }) do |f| %>
+      <%= devise_error_messages! %>
+      <fieldset>
+        <legend><h2>Sign Up</h2></legend>
+          <%= f.input :first_name %>
+          <%= f.input :last_name %>
+          <%= f.input :profile_name %>
+          <%= f.input :email, autofocus: true %>
+          <%= f.input :password %>
+          <legend><%= f.input :password_confirmation %></legend>
+          
+          <%= f.submit "Let's do this!", class: "btn btn-large btn-success btn-block" %>
+      </fieldset>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <% end %>
+    <%= render "devise/shared/links" %>
+  </div>
 
-  <div><%= f.label :first_name %><br />
-  <%= f.text_field :first_name %></div>
-
-  <div><%= f.label :last_name %><br />
-  <%= f.text_field :last_name %></div>
-
-  <div><%= f.label :profile_name %><br />
-  <%= f.text_field :profile_name %></div>
+</div>  
 
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
