--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -2,7 +2,7 @@
   <h1>All Statuses</h1> 
 </div>
 
-<%= link_to "Post a New Status", new_status_path, class: "btn btn-success" %>
+<%= link_to "Post Something", new_status_path, class: "btn btn-success" %>
 
 <% @statuses.each do |status| %>
 <div class="status">
@@ -15,10 +15,14 @@
         <p><%= status.content %></p>
         <div class="meta">
         <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
-        <span class="admin">
-          | <%= link_to "Edit", edit_status_path(status) %> |
-          <%= link_to "Delete", status, method: :delete, data: { confirm: "Are you sure you want to delete this status?"} %>
-        </span>
+        <% if user_signed_in? %>
+          <% if status.user_id == current_user.id %>
+            <span class="admin">
+              | <%= link_to "Edit", edit_status_path(status) %> |
+              <%= link_to "Delete", status, method: :delete, data: { confirm: "Are you sure you want to delete this status?"} %>
+            </span>
+          <% end %>
+        <% end %>
       </div>
     </div>
   </div>
