Added users friendships and associated tests

--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -11,7 +11,7 @@
       <%= image_tag status.user.gravatar_url %>
     </div>
     <div class="span7">
-      <strong><%= status.user.full_name %></strong>
+      <strong><%= link_to status.user.full_name, '#' %></strong>
         <p><%= status.content %></p>
         <div class="meta">
         <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
